fix: reduce search bar height on mobile

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -263,6 +263,12 @@ body {
   }
   .search-input {
     max-width: 100%;
+    padding-top: 0.4rem;
+    padding-bottom: 0.4rem;
+  }
+  .search-btn {
+    padding-top: 0.4rem;
+    padding-bottom: 0.4rem;
   }
   .full-list {
     grid-template-columns: 1fr 1fr;
